fix parallax, collapse background

--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -1,9 +1,9 @@
 
 
-  .hero{
-    /* height: 100vh; */
-    position: fixed;
-    /* top: 0px; */
+  .hero {
+    height: 100vh;
+    position: relative;
+    top: 0px;
     /* object-fit: cover; */
     z-index: -1;
   
@@ -15,20 +15,24 @@
   top: 0px;
 }
 
-.background > img, .wave2 >img, .color-transition > img{
-  width: 100%;    
+.background > img, .wave2 >img, .color-transition > img {
+  width: 100%;   
 }
 
-/* .background {
-  position: absolute;
-  top: 0px;
-} */
+.fade {
+  opacity: 0.5;
+  transition: opacity .25s ease-out;
+  -moz-transition: opacity .25s ease-out;
+  -webkit-transition: opacity .25s ease-out;
+}
 
-/* .wave2, .color-transition {
-  width: 100vw;
-  position: relative;
-  top: 0px;
-} */
+.collapse > img {
+  height: 0;
+  transition: height .25s ease-out-in;
+  -moz-transition: height .25s ease-out;
+  -webkit-transition: height .25s ease-out;
+}
+
 
 .wave2 {
   z-index: 1;
@@ -36,28 +40,31 @@
 
 .color-transition {
   z-index: 2;
+  bottom: 0;
 }
 
-.text-overlay{
+/* .text-overlay{
   width: 60%;
   height: 100vh;
   margin: 0 auto;
   position: relative;
-  border-top: 2px solid chartreuse;
   z-index: 10;
+  transition: 0.5s;
 
-}
+} */
 
 .body-copy{
   background-color: #001f27;
   height: 300vh;
-  z-index: -2;
+  z-index: 2;
+  top: -50vh;
+  /* position: relative; */
 
 }
 
 .body-copy > p {
   margin: 0 auto;
   width: 50%;
-  padding: 30px 5px;
+  padding: 10vh 5px;
   color: #e2f9ff;
 }
