--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,9 @@
 header {
-  background-color: rgba(5,5,5,.1);
+  background-color: #001f27;
+  color: #e2f9ff;
+  font-family: 'Vollkorn SC', serif;
+  height: 50px;
+  
 }
   .header-flex {
       display: flex;
@@ -9,13 +13,15 @@ header {
   }
   ul {
       list-style: none;
+      width: 100%;
+      padding: 20px;
   }
 li {
   display: inline-block;
+  font-size: 12px;
+  text-transform: uppercase;
+  margin: auto 50px;
+  text-align: center;
 }
 
-li > img{
-  width: 3rem;
-  color: rgb(255,51,0);
-}
   
