--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,4 @@
-html {height: 100%;}
+html {height: 100%; background-color:#001f27;}
 
 body {min-height: 150%;}
     
